--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="onboarding_instruction_title_0">One Step at a Time.</string>
+    <string name="onboarding_instruction_title_1">Set Goals, Earn Stars.</string>
+    <string name="onboarding_instruction_title_2">Unlock Tricks and Skins.</string>
+    <string name="onboarding_instruction_title_3">Let\'s Get Started!</string>
 </resources>
