--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,9 @@
     <string name="habit_mind_journal">Journal</string>
     <string name="habit_mind_study">Study</string>
 
-    <string name="stampcard_time">Time</string>
+    <string name="stampcard_title">Habit Stampcard</string>
+    <string name="stampcard_time">Time:</string>
+    <string name="stampcard_duration">Duration:</string>
     <string name="stampcard_frequency_daily">Daily</string>
     <string name="stampcard_set">Set</string>
 
